# fechahora

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  horasFechas.xls  horasFechas.xls - Planing.csv  index.html  install.sh  limpiar_planing.py  main.js  planing_limpio.csv  planing_limpio.json  pyproject.toml  setup.py
.github/workflows/: deploy.yml
css/: sheet.css
data/: holidays.json
planing_limpio/: README.md  index.html  main.js  planing_limpio.html
planing_limpio/css/: sheet.css
planing_limpio/data/: holidays.json
